<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    android:layout_margin="10dp"
    app:strokeColor="@color/purple_100"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/pollution_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/pollution_indicator_good"/>
        <View
            android:id="@+id/pollution_indicator"
            android:layout_width="match_parent"
            android:background="@drawable/bd_round_good"
            android:layout_height="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/pollution_numerical_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/pollution_numerical_value_good"/>

        <TextView
            android:id="@+id/pollution_meaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:padding="10dp"

            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
            android:text="@string/pollution_meaning_good"/>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>