<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="30dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"

                android:paddingTop="30dp"
                android:background="@drawable/bd_round_good"
                android:clipToOutline="true"
                app:layout_constraintTop_toTopOf="@id/containerContent"
                app:layout_constraintStart_toStartOf="@id/containerContent"
                app:layout_constraintEnd_toEndOf="@id/containerContent"

                >
                <TextView
                    android:id="@+id/averageIndexAQITitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Средний индекс AQI"
                    android:textSize="24sp"
                    android:textStyle=""
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/averageIndexAQICountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="11"
                    android:textSize="64sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/currentWeatherLocationTextView"
                    app:layout_constraintTop_toBottomOf="@id/averageIndexAQITitleTextView"
                    app:layout_constraintStart_toStartOf="@id/averageIndexAQITitleTextView"
                    app:layout_constraintEnd_toEndOf="@id/averageIndexAQITitleTextView"
                    />

                <TextView
                    android:id="@+id/currentWeatherLocationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/mainPopulant"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/averageIndexAQICountTextView" />




            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerStationsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/mainBanner"
                app:layout_constraintStart_toStartOf="@id/mainBanner"
                app:layout_constraintEnd_toEndOf="@id/mainBanner"
                app:layout_constraintBottom_toTopOf="@id/recyclerView"
                android:layout_marginTop="30dp"
                android:paddingTop="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                android:background="@drawable/bg_round_item_purple"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Станция"
                    android:textSize="24sp"

                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="@id/headerStationsContainer"
                    app:layout_constraintStart_toStartOf="@id/headerStationsContainer"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="AQI"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="@id/headerStationsContainer"
                    app:layout_constraintEnd_toEndOf="@id/headerStationsContainer"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/headerStationsContainer"
                app:layout_constraintStart_toStartOf="@id/headerStationsContainer"
                app:layout_constraintEnd_toEndOf="@id/headerStationsContainer"
                tools:listitem="@layout/zone_item"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/noInternetContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/noInternetConnection"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
            <Button
                android:id="@+id/reloadBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/reload"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/loadingContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Загрузка..."
                android:textSize="18sp"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:visibility="visible"
                />

        </LinearLayout>


        <View
            android:id="@+id/solidSeparateLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#967878"

            />


    </FrameLayout>

</ScrollView>